--- a/AdventOfCode22/AdventOfCode22.csproj
+++ b/AdventOfCode22/AdventOfCode22.csproj
@@ -18,9 +18,13 @@
     <None Remove="Inputs\09.txt" />
     <None Remove="Inputs\10.txt" />
     <None Remove="Inputs\11.txt" />
+    <None Remove="Inputs\12.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Inputs\12.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Inputs\11.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
